fixed heading spacing link to page position

--- a/CSS/knowledgebase.css
+++ b/CSS/knowledgebase.css
@@ -66,7 +66,7 @@ a #large-bubble p {
 #sub-subnav p {
     border-radius: 20px;
     padding: 4px 10px;
-    margin-left: -40px;
+    margin-left: -42px;
     font-size: 14px;
     color: var(--mainWhite);
     background: var(--lightBlue);
@@ -111,9 +111,6 @@ header #subnav a:hover p {
 }
 
 /* MAIN */
-
-
-
 
 
 
