--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -64,10 +64,8 @@ a #large-bubble p {
 }
 
 #sub-subnav p {
-    /*height: 32px;
-    max-height: 32px;*/
     border-radius: 20px;
-    padding: 4px 10px; /*9 10*/
+    padding: 5px 10px 4px 10px;
     margin-left: -4px;
     font-size: 14px;
     color: var(--mainWhite);
@@ -114,7 +112,7 @@ header #subnav a:hover p {
 
 /* MAIN */
 
-main {margin-top: 175px;}
+main {margin-top: 153px;}
 article {width: 90vw; max-width: 790px; margin: 0 auto;}
 
 /* SKILLS */
@@ -122,7 +120,6 @@ article {width: 90vw; max-width: 790px; margin: 0 auto;}
 #skills {
     display: grid;
     grid-template-columns: 44% 2% 54%;
-    /*grid-template-rows: 40vw;*/
 }
 
 #skills-menu {
@@ -381,8 +378,7 @@ input:checked + #ianimation .industry-definition {opacity: 1;}
 /* SKILL SECTIONS */
 
 #programming , #research , #project , #webdev , #animation , #languages {
-    margin: -175px auto 0 auto;
-    padding-top: 220px;
+    padding-top: 153px;
 }
 
 /* PROGRAMMING */
